--- a/build_production/index.html
+++ b/build_production/index.html
@@ -4,33 +4,33 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="Generate an elegant blog with Jigsaw">
+        <meta name="description" content="Sam Ciaramilaro - Software Engineer">
 
-        <meta property="og:title" content="Blog Starter Template"/>
+        <meta property="og:title" content="Sam Ciaramilaro"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://jigsaw-blog-template.tighten.co/"/>
-        <meta property="og:description" content="Generate an elegant blog with Jigsaw" />
+        <meta property="og:url" content="https://mass6.github.io/"/>
+        <meta property="og:description" content="Sam Ciaramilaro - Software Engineer" />
 
-        <title>Blog Starter Template</title>
+        <title>Sam Ciaramilaro</title>
 
-        <link rel="home" href="https://jigsaw-blog-template.tighten.co">
+        <link rel="home" href="https://mass6.github.io/">
         <link rel="icon" href="/favicon.ico">
-        <link href="/blog/feed.atom" type="application/atom+xml" rel="alternate" title="Blog Starter Template Atom Feed">
+        <link href="/blog/feed.atom" type="application/atom+xml" rel="alternate" title="Sam Ciaramilaro Atom Feed">
 
                     <!-- Insert analytics code here -->
         
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,300i,400,400i,700,700i,800,800i" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=69da9bb090805cbe718b71a5536664d1">
+        <link rel="stylesheet" href="/assets/build/css/main.css?id=ad8b08a9bf9825173dbf5d95e779c022">
     </head>
 
     <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
         <header class="flex items-center shadow bg-white border-b h-24 py-4" role="banner">
             <div class="container flex items-center max-w-8xl mx-auto px-4 lg:px-8">
                 <div class="flex items-center">
-                    <a href="/" title="Blog Starter Template home" class="inline-flex items-center">
-                        <img class="h-8 md:h-10 mr-3" src="/assets/img/logo.svg" alt="Blog Starter Template logo" />
+                    <a href="/" title="Sam Ciaramilaro home" class="inline-flex items-center">
+                        <img class="h-8 md:h-10 mr-3" src="/assets/img/logo.svg" alt="Sam Ciaramilaro logo" />
 
-                        <h1 class="text-lg md:text-2xl text-blue-800 font-semibold hover:text-blue-600 my-0">Blog Starter Template</h1>
+                        <h1 class="text-lg md:text-2xl text-blue-800 font-semibold hover:text-blue-600 my-0">Sam Ciaramilaro</h1>
                     </a>
                 </div>
 
@@ -38,17 +38,17 @@
                     <search></search>
 
                     <nav class="hidden lg:flex items-center justify-end text-lg">
-    <a title="Blog Starter Template Blog" href="/blog"
+    <a title="Sam Ciaramilaro Blog" href="/blog"
         class="ml-6 text-gray-700 hover:text-blue-600 ">
         Blog
     </a>
 
-    <a title="Blog Starter Template About" href="/about"
+    <a title="Sam Ciaramilaro About" href="/about"
         class="ml-6 text-gray-700 hover:text-blue-600 ">
         About
     </a>
 
-    <a title="Blog Starter Template Contact" href="/contact"
+    <a title="Sam Ciaramilaro Contact" href="/contact"
         class="ml-6 text-gray-700 hover:text-blue-600 ">
         Contact
     </a>
@@ -78,21 +78,21 @@
     <ul class="my-0">
         <li class="pl-4">
             <a
-                title="Blog Starter Template Blog"
+                title="Sam Ciaramilaro Blog"
                 href="/blog"
                 class="block mt-0 mb-4 text-sm no-underline text-gray-800 hover:text-blue-500"
             >Blog</a>
         </li>
         <li class="pl-4">
             <a
-                title="Blog Starter Template About"
+                title="Sam Ciaramilaro About"
                 href="/about"
                 class="block mt-0 mb-4 text-sm no-underline text-gray-800 hover:text-blue-500"
             >About</a>
         </li>
         <li class="pl-4">
             <a
-                title="Blog Starter Template Contact"
+                title="Sam Ciaramilaro Contact"
                 href="/contact"
                 class="block mt-0 mb-4 text-sm no-underline text-gray-800 hover:text-blue-500"
             >Contact</a>
@@ -109,14 +109,14 @@
             </p>
 
             <h2 class="text-3xl mt-0">
-                <a href="https://jigsaw-blog-template.tighten.co/blog/getting-started" title="Read Getting Started" class="text-gray-900 font-extrabold">
+                <a href="https://mass6.github.io/blog/getting-started" title="Read Getting Started" class="text-gray-900 font-extrabold">
                     Getting Started
                 </a>
             </h2>
 
             <p class="mt-0 mb-4">This is a starter template for creating a beautiful, customizable blog with minimal effort. You’ll only have to change a few settings and you’re ready to go.</p>
 
-            <a href="https://jigsaw-blog-template.tighten.co/blog/getting-started" title="Read - Getting Started" class="uppercase tracking-wide mb-4">
+            <a href="https://mass6.github.io/blog/getting-started" title="Read - Getting Started" class="uppercase tracking-wide mb-4">
                 Read
             </a>
         </div>
@@ -129,14 +129,14 @@
             </p>
 
             <h2 class="text-3xl mt-0">
-                <a href="https://jigsaw-blog-template.tighten.co/blog/customizing-your-site" title="Read Customizing Your Site" class="text-gray-900 font-extrabold">
+                <a href="https://mass6.github.io/blog/customizing-your-site" title="Read Customizing Your Site" class="text-gray-900 font-extrabold">
                     Customizing Your Site
                 </a>
             </h2>
 
             <p class="mt-0 mb-4">This starter template comes pre-loaded with Tailwind CSS, a utility CSS framework that allows you to customize and build complex designs without touching a line of CSS.</p>
 
-            <a href="https://jigsaw-blog-template.tighten.co/blog/customizing-your-site" title="Read - Customizing Your Site" class="uppercase tracking-wide mb-4">
+            <a href="https://mass6.github.io/blog/customizing-your-site" title="Read - Customizing Your Site" class="uppercase tracking-wide mb-4">
                 Read
             </a>
         </div>
@@ -175,7 +175,7 @@
 
     <h2 class="text-3xl mt-0">
         <a
-            href="https://jigsaw-blog-template.tighten.co/blog/fuse-search"
+            href="https://mass6.github.io/blog/fuse-search"
             title="Read more - Fuse Search"
             class="text-gray-900 font-extrabold"
         >Fuse Search</a>
@@ -184,7 +184,7 @@
     <p class="mb-4 mt-0">To provide fast, local search of your blog, this starter template comes with a pre-built Vue.js component that uses Fuse.js. Fuse.js is a "lightweight fuzzy-search library with no dependencies." It...</p>
 
     <a
-        href="https://jigsaw-blog-template.tighten.co/blog/fuse-search"
+        href="https://mass6.github.io/blog/fuse-search"
         title="Read more - Fuse Search"
         class="uppercase font-semibold tracking-wide mb-2"
     >Read</a>
@@ -200,7 +200,7 @@
 
     <h2 class="text-3xl mt-0">
         <a
-            href="https://jigsaw-blog-template.tighten.co/blog/mailchimp-newsletters"
+            href="https://mass6.github.io/blog/mailchimp-newsletters"
             title="Read more - Mailchimp Newsletters"
             class="text-gray-900 font-extrabold"
         >Mailchimp Newsletters</a>
@@ -209,7 +209,7 @@
     <p class="mb-4 mt-0">Mailchimp is a fantastic marketing platform, and takes the pain out of managing email lists and campaigns. The blog starter template comes with a beautiful pre-built newsletter form, that only needs...</p>
 
     <a
-        href="https://jigsaw-blog-template.tighten.co/blog/mailchimp-newsletters"
+        href="https://mass6.github.io/blog/mailchimp-newsletters"
         title="Read more - Mailchimp Newsletters"
         class="uppercase font-semibold tracking-wide mb-2"
     >Read</a>
@@ -228,7 +228,7 @@
 
     <h2 class="text-3xl mt-0">
         <a
-            href="https://jigsaw-blog-template.tighten.co/blog/custom-404-page"
+            href="https://mass6.github.io/blog/custom-404-page"
             title="Read more - Custom 404 Pages"
             class="text-gray-900 font-extrabold"
         >Custom 404 Pages</a>
@@ -237,7 +237,7 @@
     <p class="mb-4 mt-0">This starter template includes a custom 404 Not Found error page, located at <code>/source/404.blade.php</code>. To preview the 404 page, you can visit <code>/404</code> in your browser....</p>
 
     <a
-        href="https://jigsaw-blog-template.tighten.co/blog/custom-404-page"
+        href="https://mass6.github.io/blog/custom-404-page"
         title="Read more - Custom 404 Pages"
         class="uppercase font-semibold tracking-wide mb-2"
     >Read</a>
@@ -253,7 +253,7 @@
 
     <h2 class="text-3xl mt-0">
         <a
-            href="https://jigsaw-blog-template.tighten.co/blog/my-first-blog-post"
+            href="https://mass6.github.io/blog/my-first-blog-post"
             title="Read more - My First Blog Post"
             class="text-gray-900 font-extrabold"
         >My First Blog Post</a>
@@ -262,7 +262,7 @@
     <p class="mb-4 mt-0">This is the start of your first blog post.</p>
 
     <a
-        href="https://jigsaw-blog-template.tighten.co/blog/my-first-blog-post"
+        href="https://mass6.github.io/blog/my-first-blog-post"
         title="Read more - My First Blog Post"
         class="uppercase font-semibold tracking-wide mb-2"
     >Read</a>
