Build for deploy

--- a/build_production/404/index.html
+++ b/build_production/404/index.html
@@ -8,12 +8,12 @@
 
         <meta property="og:title" content="Sam Ciaramilaro"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://mass6.github.io/404"/>
+        <meta property="og:url" content="/404"/>
         <meta property="og:description" content="Sam Ciaramilaro - Software Engineer" />
 
         <title>Sam Ciaramilaro</title>
 
-        <link rel="home" href="https://mass6.github.io/">
+        <link rel="home" href="">
         <link rel="icon" href="/favicon.ico">
         <link href="/blog/feed.atom" type="application/atom+xml" rel="alternate" title="Sam Ciaramilaro Atom Feed">
 
