Build for deploy

--- a/build_production/contact/index.html
+++ b/build_production/contact/index.html
@@ -8,12 +8,12 @@
 
         <meta property="og:title" content="Contact | Sam Ciaramilaro"/>
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://mass6.github.io/github.io/contact"/>
+        <meta property="og:url" content="https://mass6.github.io/contact"/>
         <meta property="og:description" content="Get in touch with us" />
 
         <title>Contact | Sam Ciaramilaro</title>
 
-        <link rel="home" href="https://mass6.github.io/github.io/">
+        <link rel="home" href="https://mass6.github.io">
         <link rel="icon" href="/favicon.ico">
         <link href="/blog/feed.atom" type="application/atom+xml" rel="alternate" title="Sam Ciaramilaro Atom Feed">
 
