--- a/build_production/about/index.html
+++ b/build_production/about/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="A little bit about the site">
+        <meta name="description" content="About Sam Ciaramilaro">
 
         <meta property="og:title" content="About | Sam Ciaramilaro"/>
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://mass6.github.io/about"/>
-        <meta property="og:description" content="A little bit about the site" />
+        <meta property="og:description" content="About Sam Ciaramilaro" />
 
         <title>About | Sam Ciaramilaro</title>
 
@@ -20,7 +20,7 @@
                     <!-- Insert analytics code here -->
         
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,300i,400,400i,700,700i,800,800i" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=ad8b08a9bf9825173dbf5d95e779c022">
+        <link rel="stylesheet" href="/assets/build/css/main.css?id=69da9bb090805cbe718b71a5536664d1">
     </head>
 
     <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
@@ -28,7 +28,7 @@
             <div class="container flex items-center max-w-8xl mx-auto px-4 lg:px-8">
                 <div class="flex items-center">
                     <a href="/" title="Sam Ciaramilaro home" class="inline-flex items-center">
-                        <img class="h-8 md:h-10 mr-3" src="/assets/img/logo.svg" alt="Sam Ciaramilaro logo" />
+                        <img class="h-8 md:h-10 mr-3" src="/assets/img/sc_logo.png" alt="Sam Ciaramilaro logo" />
 
                         <h1 class="text-lg md:text-2xl text-blue-800 font-semibold hover:text-blue-600 my-0">Sam Ciaramilaro</h1>
                     </a>
@@ -103,15 +103,19 @@
         <main role="main" class="flex-auto w-full container max-w-4xl mx-auto py-16 px-6">
                 <h1>About</h1>
 
-    <img src="/assets/img/about.png"
+    <img src="/assets/img/sc_profile.png"
         alt="About image"
         class="flex rounded-full h-64 w-64 bg-contain mx-auto md:float-right my-6 md:ml-10">
 
-    <p class="mb-6">This is where you can give a little more information about yourself or site. If you'd like to change the structure of this page, you can find the file at <code>source/about.blade.php</code></p>
+    <p class="mb-6">👋 Hi!, I’m Sam Ciaramilaro, a backend software engineer based in Copenhagen, Denmark. I specialize in writing APIs in Laravel PHP and developing web apps using the TALL stack. I’m passionate about building clean code, Domain Driven Design, and Test Driven Development.</p>
 
-    <p class="mb-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum officia dolorem accusantium veniam quae, possimus, temporibus explicabo magni voluptas. fugit natus deserunt atque veniam possimus earum harum itaque est!</p>
+    <p class="mb-6">Originally from Southern California, and relocated to Denmark in 2006. I currently work as a Lead Developer at Kontainer.com, where I spend the majority of my time working on improving our application, and extending our team’s Domain Driven Design and Test Driven Development skills.</p>
 
-    <p class="mb-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum officia dolorem accusantium veniam quae, possimus, temporibus explicabo magni voluptas. fugit natus deserunt atque veniam!</p>
+    <p class="mb-6">When I’m not working, I’m usually cooking, or cleaning up the mess I just made while cooking.</p>
+
+    <p class="my-1">🍕 Maker of pizza.</p>
+    <p class="my-1">🌮 Lover of tacos.</p>
+    <p class="my-1">🧡 Father of three wonderful children.</p>
         </main>
 
         <footer class="bg-white text-center text-sm mt-12 py-4" role="contentinfo">
