--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <!-- Insert analytics code here -->
         
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,300i,400,400i,700,700i,800,800i" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=ad8b08a9bf9825173dbf5d95e779c022">
+        <link rel="stylesheet" href="/assets/build/css/main.css?id=05f0eb86547fcdbad5bc09425d7b3dc5">
     </head>
 
     <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
@@ -30,7 +30,7 @@
                     <a href="/" title="Sam Ciaramilaro home" class="inline-flex items-center">
                         <img class="h-8 md:h-10 mr-3" src="/assets/img/sc_logo.png" alt="Sam Ciaramilaro logo" />
 
-                        <h1 class="text-lg md:text-2xl text-blue-800 font-semibold hover:text-blue-600 my-0">Sam Ciaramilaro</h1>
+                        <h1 class="text-lg md:text-2xl text-gray-700 font-semibold hover:text-gray-500 my-0">Sam Ciaramilaro</h1>
                     </a>
                 </div>
 
@@ -142,28 +142,6 @@
         </div>
 
             
-    <div class="flex justify-center lg:-mx-12 my-12 p-6 md:px-12 bg-gray-200 border border-gray-400 text-sm md:rounded shadow">
-    <!-- Begin Mailchimp Signup Form -->
-    <div id="mc_embed_signup">
-        <form action="https://your-mail-chimp-list-manage-url" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-                <h2>Sign up for our newsletter</h2>
-                <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email Address </label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address">
-                </div>
-                <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_25582686a9fc051afd5453557_189578c854" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-            </div>
-        </form>
-    </div>
-    <!--End Mailchimp Signup Form -->
-</div>
 
 
             <div class="flex flex-col md:flex-row md:-mx-6">
@@ -288,11 +266,7 @@
 
         <script src="/assets/build/js/main.js?id=a59be55acb960ad49eebba746bfb1b48"></script>
 
-            <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-    <script>(function($) {
-        window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
-    </script>
-<script>
+        <script>
     const navMenu = {
         toggle() {
             const menu = document.getElementById('js-nav-menu');
